raty star alignment fix

--- a/app/assets/stylesheets/jquery.raty.css
+++ b/app/assets/stylesheets/jquery.raty.css
@@ -1,10 +1,3 @@
-.average-rating {
-  vertical-align:top;
-  display:inline;
-  margin-left:auto;
-  margin-right:auto;
-  padding: 0 4px 0 0;
-}
 .cancel-on-png, .cancel-off-png, .star-on-png, .star-off-png, .star-half-png {
   font-size: 2em;
 }
